--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,7 @@
 [submodule "imgui"]
 	path = imgui
 	url = https://github.com/ocornut/imgui.git
+	branch = docking
 [submodule "glfw"]
 	path = glfw
 	url = https://github.com/glfw/glfw.git
